--- a/Null.FastRun.WinForm/MainForm.zh-Hans.resx
+++ b/Null.FastRun.WinForm/MainForm.zh-Hans.resx
@@ -121,7 +121,7 @@
     <value>关闭</value>
   </data>
   <data name="btn_ok.ToolTip" xml:space="preserve">
-    <value>应用并关闭</value>
+    <value />
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btn_apply_all.TabIndex" type="System.Int32, mscorlib">
@@ -131,7 +131,7 @@
     <value>应用</value>
   </data>
   <data name="btn_apply_all.ToolTip" xml:space="preserve">
-    <value>应用当前配置</value>
+    <value />
   </data>
   <data name="btn_config.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -140,7 +140,7 @@
     <value>配置</value>
   </data>
   <data name="btn_config.ToolTip" xml:space="preserve">
-    <value>更多配置项</value>
+    <value />
   </data>
   <data name="btn_cancel.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -149,7 +149,7 @@
     <value>取消</value>
   </data>
   <data name="btn_cancel.ToolTip" xml:space="preserve">
-    <value>不保存并关闭</value>
+    <value />
   </data>
   <data name="btn_add.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -158,7 +158,7 @@
     <value>添加</value>
   </data>
   <data name="btn_add.ToolTip" xml:space="preserve">
-    <value>添加一个链接到映射列表</value>
+    <value />
   </data>
   <data name="btn_edit.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -167,7 +167,7 @@
     <value>编辑</value>
   </data>
   <data name="btn_edit.ToolTip" xml:space="preserve">
-    <value>编辑映射列表中选中的条目</value>
+    <value />
   </data>
   <data name="btn_remove.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -176,7 +176,7 @@
     <value>移除</value>
   </data>
   <data name="btn_remove.ToolTip" xml:space="preserve">
-    <value>移除映射列表中的选中项</value>
+    <value />
   </data>
   <data name="btn_about.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -185,10 +185,28 @@
     <value>关于</value>
   </data>
   <data name="btn_about.ToolTip" xml:space="preserve">
-    <value>查看关于本程序的详细信息</value>
+    <value />
   </data>
   <data name="lv_links.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
+  </data>
+  <data name="lv_links.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="bdr_links.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="btn_save.Text" xml:space="preserve">
+    <value>保存</value>
+  </data>
+  <data name="btn_save.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="btn_open.Text" xml:space="preserve">
+    <value>打开</value>
+  </data>
+  <data name="btn_open.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1327,5 +1345,8 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>诺尔 - 快速启动</value>
+  </data>
+  <data name="$this.ToolTip" xml:space="preserve">
+    <value />
   </data>
 </root>
