--- a/Null.FastRun.WinForm/View/AboutDialog.resx
+++ b/Null.FastRun.WinForm/View/AboutDialog.resx
@@ -129,13 +129,13 @@
     <value>170, 12</value>
   </data>
   <data name="lb_title.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 40</value>
+    <value>225, 40</value>
   </data>
   <data name="lb_title.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
   <data name="lb_title.Text" xml:space="preserve">
-    <value>Null.Faststart</value>
+    <value>Null.FastRun</value>
   </data>
   <data name="&gt;&gt;lb_title.Name" xml:space="preserve">
     <value>lb_title</value>
@@ -217,13 +217,13 @@ Add file mapping to the app, then apply, and you can run them with 'run dialog' 
     <value>8, 373</value>
   </data>
   <data name="lnlb_github.Size" type="System.Drawing.Size, System.Drawing">
-    <value>302, 20</value>
+    <value>300, 20</value>
   </data>
   <data name="lnlb_github.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
   </data>
   <data name="lnlb_github.Text" xml:space="preserve">
-    <value>https://github.com/SlimeNull/Null.Faststart</value>
+    <value>https://github.com/SlimeNull/Null.FastRun</value>
   </data>
   <data name="&gt;&gt;lnlb_github.Name" xml:space="preserve">
     <value>lnlb_github</value>
